data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1600.wast
;; 1. **Test Description:**    - Test a `br_table` instruction with an index value that exceeds the number of available branch targets, following an `unreachable` instruction to ensure the trap is executed before the out-of-bounds check.    - **Constraint:** This checks if `unreachable` correctly triggers a trap, preventing the `br_table` instruction from executing.    - **Relation to Edge Case:** Ensures `unreachable` interrupts any control flow alterations by `br_table`.

(assert_invalid
  (module
    (func $test_br_table_unreachable
      (unreachable) 
      (br_table 0 1 (i32.const 2))
    )
  )
  "type mismatch"
)